Fixed: Bug 46652 - From address field overflows with long address

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -412,7 +412,6 @@
     }
 
     .detail-view-row {
-        .from { float: left; }
         .date { float: right; margin-left: 16px; }
         .recipients { float: left; }
         .priority { font-size: 14px; }
